--- a/resource_library/src/main/res/layout/activity_login.xml
+++ b/resource_library/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/logo"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@{login_model.logo}"
+                android:src="@={login_model.logo}"
                 android:layout_centerHorizontal="true" />
 
             <EditText
@@ -46,7 +46,7 @@
                 android:background="@drawable/edittextstyle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@{login_model.account}"
+                android:text="@={login_model.account}"
                 android:maxLines="1"
                 android:layout_below="@+id/logo"
                 android:paddingLeft="15dp" />
@@ -60,7 +60,7 @@
                 android:layout_below="@+id/usernameet"
                 android:layout_marginTop="10dp"
                 android:inputType="textPassword"
-                android:text="@{login_model.password}"
+                android:text="@={login_model.password}"
                 android:maxLines="1"
                 android:paddingLeft="15dp" />
 
@@ -73,6 +73,7 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:background="@drawable/greenroundcornerbtn"
+                android:onClickListener="@={login_model.clickListener}"
                 android:layout_below="@+id/passwordet" />
         </RelativeLayout>
 
